--- a/Project - VacMan/bin/.gitignore
+++ b/Project - VacMan/bin/.gitignore
@@ -1,9 +1,4 @@
-/programming/
-/coin.png
-/lvl1.png
-/vacman_down.png
-/vacman_left.png
-/vacman_right.png
-/vacman_up.png
-/main_menu.png
-/wallPartRed.png
+/block.psd
+/gate.psd
+/vacman.psd
+/wallpart_gate.png
