--- a/Project - VacMan/.classpath
+++ b/Project - VacMan/.classpath
@@ -7,5 +7,13 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/jetty-client-9.4.8.v20171121.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-http-9.4.8.v20171121.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-io-9.4.8.v20171121.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-util-9.4.8.v20171121.jar"/>
+	<classpathentry kind="lib" path="lib/msgpack-core-0.8.14.jar"/>
+	<classpathentry kind="lib" path="lib/websocket-api-9.4.8.v20171121.jar"/>
+	<classpathentry kind="lib" path="lib/websocket-client-9.4.8.v20171121.jar"/>
+	<classpathentry kind="lib" path="lib/websocket-common-9.4.8.v20171121.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
